--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,10 @@ jobs:
       - name: Get commit message
         id: get_commit_message
         run: |
-          echo "commit_message=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+          commit_message=$(git log -1 --pretty=%B)
+          sanitized_tag_name=$(echo "$commit_message" | tr -cd '[:alnum:].-_')
+          echo "commit_message=$commit_message" >> $GITHUB_ENV
+          echo "tag_name=$sanitized_tag_name" >> $GITHUB_ENV
 
       - name: Create zip file
         run: zip -r zapret.zip ./*
@@ -27,7 +30,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: latest  # Используется тег "latest" для обновления при каждом коммите
+          tag_name: "${{ env.tag_name }}"  # Тег на основе сообщения коммита с сохранением точки
           release_name: "${{ env.commit_message }}"  # Название релиза из сообщения коммита
           draft: false
           prerelease: false
