--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Create Release on Commit
 on:
   push:
     branches:
-      - main  # Замените "main" на нужную ветку, если необходимо
+      - main
 
 jobs:
   create-release:
@@ -20,6 +20,9 @@ jobs:
           sanitized_tag_name=$(echo "$commit_message" | tr -cd '[:alnum:].-_')
           echo "commit_message=$commit_message" >> $GITHUB_ENV
           echo "tag_name=$sanitized_tag_name" >> $GITHUB_ENV
+      
+      - name: Remove README.md
+        run: rm -f README.md
 
       - name: Create zip file
         run: zip -r zapret.zip ./*
@@ -30,8 +33,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: "${{ env.tag_name }}"  # Тег на основе сообщения коммита с сохранением точки
-          release_name: "${{ env.commit_message }}"  # Название релиза из сообщения коммита
+          tag_name: "${{ env.tag_name }}"
+          release_name: "${{ env.commit_message }}"
           draft: false
           prerelease: false
 
